[project]
name = "pysim-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano Sportelli", email = "sportelliluciano@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "scapy (>=2.6.1,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "pysim_sdk", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
